# siruev

./: Cargo.toml  LICENSE  README.md  out.rs
.github/workflows/: rust.yml
examples/: simple.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: lib.rs
