[package]
name = "siruev"
version = "1.0.0"
edition = "2024"
authors = ["Swiiz <github.com/Swiiz>"]

[features]
parallel = ["dep:rayon"]
default = ["parallel"]

[dependencies]
proc_macro = { path = "./proc_macro" }

higher-kinded-types = "0.2.0"
inventory = "0.3.20"
itertools = "0.14.0"
typeid = "1.0.3"
rayon = { version = "1.10.0", optional = true }